<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_profile.UserProfileConfig">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="20dp"
            android:text="@string/get_started"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView3"
                android:layout_width="139dp"
                android:layout_height="149dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/change_profile_pic"
                android:src="@drawable/user_circle_solid"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/changePictureFabBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:backgroundTint="@color/green_light"
                android:contentDescription="@string/add_photo"
                android:src="@drawable/ic_camera"
                app:fabSize="mini"
                app:layout_anchor="@id/imageView3"
                app:layout_anchorGravity="bottom|end"
                app:tint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:hint="@string/user_name"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:errorContentDescription="@string/signForm_helperText"
            app:helperText="@string/blank">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/green_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:hint="@string/first_name"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:errorContentDescription="@string/signForm_helperText"
            app:helperText="@string/blank">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/gray_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:hint="@string/last_name"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:errorContentDescription="@string/signForm_helperText"
            app:helperText="@string/blank">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/gray_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/green_dark"
                android:text="@string/done" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>