<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nutrity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calorias"
        android:name="com.example.nutrity.ui.calorias.CaloriasFragment"
        android:label="@string/menu_calorias"
        tools:layout="@layout/fragment_calorias" />

    <fragment
        android:id="@+id/nav_recetas"
        android:name="com.example.nutrity.ui.recetas.RecetasFragment"
        android:label="@string/menu_recetas"
        tools:layout="@layout/fragment_recetas" />
    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.nutrity.ui.configuracion.ConfiguracionFragment"
        android:label="Perfil"
        tools:layout="@layout/configuracion_fragment" />
    <fragment
        android:id="@+id/comidasFragment"
        android:name="com.example.nutrity.ui.comidas.ComidasFragment"
        android:label="Comidas"
        tools:layout="@layout/comidas_fragment" />
</navigation>