<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/checkCircleImage"
        android:layout_width="153dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        app:srcCompat="@drawable/ic_check_circle"
        android:contentDescription="@string/email_verification_desc" />

    <TextView
        android:id="@+id/emailVerificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        android:text="@string/email_verification"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkCircleImage"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_email"
        android:backgroundTint="@color/blue_dark"
        app:layout_constraintTop_toBottomOf="@id/emailVerificationText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resendEmail"
        app:layout_constraintTop_toBottomOf="@id/emailVerificationText" />
</androidx.constraintlayout.widget.ConstraintLayout>